# augur

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml
src/augur/: __init__.py  __main__.py  calibration_bank.py  charts.py  cli.py  db.py  models.py  practice.py  scoring.py  terminal.py  util.py
tests/: test_cli.py  test_db.py  test_models.py  test_practice.py  test_scoring.py  test_util.py
