[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "augur-cli"
version = "0.3.0"
description = "A zero-dependency terminal tool to log forecasts, resolve them, and train your calibration."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
keywords = ["forecasting", "calibration", "brier-score", "decision-journal", "superforecasting", "cli"]
authors = [{ name = "augur contributors" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
]
# Zero runtime dependencies. Standard library only. That is a feature.
dependencies = []

[project.urls]
Homepage = "https://github.com/jarvismoney/augur"
Source = "https://github.com/jarvismoney/augur"
Issues = "https://github.com/jarvismoney/augur/issues"
Changelog = "https://github.com/jarvismoney/augur/blob/main/CHANGELOG.md"

[project.scripts]
augur = "augur.cli:main"
# Collision-safe alias: `augur` may clash with Nextstrain's `augur` in a shared
# environment; `augur-cli` always resolves to this tool.
augur-cli = "augur.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]
